# obsidian-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLEAN_INSTALL.md  FINAL_SOLUTION.md  OBSIDIAN_REST_API_RESEARCH.md  Project_Description.md  README.md  START_HERE.md  TESTING.md  TEST_ENV_VARS.md  VICTORY.md  coverage.json  pyproject.toml  run-mcp-with-env.sh
.specify/memory/: constitution.md
specs/001-obsidian-mcp-extended/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-obsidian-mcp-extended/checklists/: requirements.md
specs/001-obsidian-mcp-extended/contracts/: backlinks.md  insertion.md  statistics.md  tags.md
specs/002-hybrid-plugin-control/: data-model.md  plan.md  quickstart.md  research-kanban.md  research.md  spec.md  tasks.md
specs/002-hybrid-plugin-control/checklists/: requirements.md
specs/002-hybrid-plugin-control/contracts/: README.md  tasks-fs.md
src/: server.py
src/models/: obsidian.py
src/tools/: backlinks.py  canvas.py  commands.py  dataview_api.py  dataview_fs.py  kanban.py  links.py  smart_insert.py  statistics.py  tags.py  tasks.py  templater_api.py  templates.py  workspace.py
src/utils/: __init__.py  api_availability.py  error_utils.py  obsidian_api_client.py  patterns.py  validators.py
tests/: conftest.py
tests/fixtures/sample_vault/: note1.md
tests/integration/: test_backlinks_integration.py
tests/unit/: test_backlinks.py  test_dataview_fs.py  test_kanban.py  test_links.py  test_smart_insert.py  test_statistics.py  test_tags.py  test_tasks.py
